; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-kobj.c_kobj_get_filesize.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-kobj.c_kobj_get_filesize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._buf = type { i32 }
%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kobj_get_filesize(%struct._buf* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct._buf*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__, align 4
  %7 = alloca i32, align 4
  store %struct._buf* %0, %struct._buf** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct._buf*, %struct._buf** %4, align 8
  %9 = getelementptr inbounds %struct._buf, %struct._buf* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @VOP_GETATTR(i32 %10, %struct.TYPE_3__* %6, i32 0, i32 0, i32* null)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %7, align 4
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %5, align 8
  store i32 %18, i32* %19, align 4
  %20 = load i32, i32* %7, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %14
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @VOP_GETATTR(i32, %struct.TYPE_3__*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
